Bug 1311137: [MSE] Ensure buffered range doesn't get modified during run. r=gerald

Previously two separate monitors were used to find the highest end time, and then work on tracks, introducing the possibility that tracks could be modified between these two operations. Now only one monitor is used to ensure consistency.

MozReview-Commit-ID: 1foB82S6W1Z

--HG--
extra : rebase_source : 817ff8cf231372a4db90b2c11f3bb60d1031fa89